--- a/Regime_shift_example.ipynb
+++ b/Regime_shift_example.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "The data come from the [Regime Shifts DataBase](https://www.regimeshifts.org/datasets-resources/details/15/4?return=L2NvbXBvbmVudC9mYWJyaWsvbGlzdC8xMC8wP3Jlc2V0ZmlsdGVycz0wJmFtcDtJdGVtaWQ9OQ==)\n",
     "\n",
+    "The source code of this notebook and the instructions to deploy it with Voilà are available [here](https://github.com/romain894/demo-data-visualisation-regime-shifts).\n",
+    "\n",
     "Romain THOMAS  \n",
     "June 27, 2023"
    ]
